# NewBing

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: menu.rs  mod.rs  setup.rs
