[package]
name = "NewBing"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
log = "0.4.17"
serde_json = "1.0"
tauri = { version = "1.2.4", features = ["devtools", "global-shortcut", "shell-open"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
serde = { version = "1.0", features = ["derive"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
